[project]
name = "vito"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.3",
    "torch==2.9",
    "torchvision==0.24.0",
    "einops==0.8.1",
    "ninja==1.13.0",
    "flash-attn==2.8.3",
    "timm==1.0.21",
    "diffusers==0.35.2",
    "pyyaml==6.0.1",
    "huggingface-hub==0.36.0",
    "pytorch-msssim==1.0.0",
    "lpips==0.1.4",
    "imageio[ffmpeg]>=2.37.0",
    "accelerate>=1.11.0",
]

[tool.uv.sources]
torch = { index = "torch-cu128" }
torchvision = { index = "torch-cu128" }

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "ninja"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
